--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -1,196 +1,205 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
-    <head th:fragment="head">
-        <meta charset="UTF-8"/>
-        <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
-        <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-        <link href="https://fonts.googleapis.com" rel="preconnect"/>
-        <link crossorigin href="https://fonts.gstatic.com" rel="preconnect"/>
-        <link
-                href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap"
-                rel="stylesheet"
-        />
-        <link rel="stylesheet" th:href="@{/css/custom.css}"/>
-        <link
-                href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
-                rel="stylesheet"
-        />
-        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-        <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
-    </head>
-    <header th:fragment="navbar">
-        <nav
-                class="navbar navbar-expand-md navbar-pc-economic-light bg-pc-economic-default"
-        >
-            <div class="container-fluid">
-                <div class="navbar-collapse collapse order-1 col-1">
-                    <ul class="navbar-nav me-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link col-12 d-flex justify-content-center" href="/"
-                            ><img class="col-9" src="/img/static/logo-no-background.png"
-                            /></a>
-                        </li>
-                    </ul>
-                </div>
-                <!-- Cercador -->
-                <div class="order-2 col-xs-8 col-7 d-flex">
-                    <div class="my-auto col-9 col-xl-11">
-                        <select id="cercador">
-                            <option disabled selected>Buscador</option>
-                        </select>
-                    </div>
-                    <button class="btn btn-pc-economic-dark mx-1 col" id="cercar">
-                        <i class="bi bi-search"></i>
-                    </button>
-                </div>
-                <!-- Login + Carrito -->
-                <div class="d-flex justify-content-center d-md-none d-block mx-1">
-                    <a class="nav-link btn btn-pc-economic-dark" href="/">
-                        <i class="bi bi-house"></i>
-                    </a>
-                </div>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse order-3 col" id="navbarSupportedContent">
-                    <ul class="navbar-nav col-12 justify-content-evenly">
-                        <li class="nav-item d-flex justify-content-center ">
-                            <a class="nav-link btn btn-pc-economic-dark mt-1" th:href="@{/login}">
-                                <i class="bi bi-person"></i>
-                            </a>
-                        </li>
-                        <li class="nav-item d-flex justify-content-center ">
-                            <button type="button" class="nav-link btn btn-pc-economic-dark mt-1" data-bs-toggle="modal" data-bs-target="#modal">
-                                <i class="bi bi-translate"></i>
-                            </button>
-                        </li>
-                        <li class="nav-item d-flex justify-content-center ">
-                            <a class="nav-link btn btn-pc-economic-dark mt-1" th:href="@{/carrito}" >
-                                <i class="bi bi-cart4"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="modalLabel">Elige tu idioma</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <div>
-                            <!-- Imprimir select de idiomas -->
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                        <button type="button" class="btn btn-primary">Guardar</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <nav class="navbar navbar-expand-md bg-pc-economic-light">
-            <!-- Categories Offcanvas -->
-            <button class="btn btn-pc-economic-dark ml-4" type="button" data-bs-toggle="offcanvas"
-                    data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
-                Todas las categorias
-            </button>
-        </nav>
-
-        <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
-             aria-labelledby="offcanvasWithBothOptionsLabel">
-            <div class="offcanvas-header bg-pc-economic-default">
-                <h5 class="offcanvas-title text-light" id="offcanvasWithBothOptionsLabel">
-                    Todas las categorias :</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            </div>
-            <div class="offcanvas-body" id="canvasBody">
-            </div>
-        </div>
-    </header>
-    <footer
-            class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top container bg-cont"
-            th:fragment="footer"
+<head th:fragment="head">
+    <meta charset="UTF-8"/>
+    <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <link href="https://fonts.googleapis.com" rel="preconnect"/>
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect"/>
+    <link
+            href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap"
+            rel="stylesheet"
+    />
+    <link rel="stylesheet" th:href="@{/css/custom.css}"/>
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
+            rel="stylesheet"
+    />
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
+    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+</head>
+<header th:fragment="navbar">
+    <nav
+            class="navbar navbar-expand-md navbar-pc-economic-light bg-pc-economic-default"
     >
-        <p class="col-md-4 mb-0 text-muted">
-            © 2023 PCEconomic Company, Inc y Multimedia SLU CIF B73347494. Ses
-            Tapereres, 32, 07500 Manacor, Balearic Islands
-        </p>
-    </footer>
-    <div th:fragment="jquery">
-        <script
-                crossorigin="anonymous"
-                integrity="sha256-2krYZKh//PcchRtd+H+VyyQoZ/e3EcrkxhM8ycwASPA="
-                src="https://code.jquery.com/jquery-3.6.2.min.js"
-        > </script>
-        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-        <script>
-            $.ajax({
-                url: "/api/articles",
-                type: "GET",
-                success: function (data) {
-                    var options = [];
-
-                    console.log(options);
-
-                    $("#cercador").select2({
-                        data: options,
-                        placeholder: "Buscar",
-                        allowClear: true,
-                        width: "100%"
-                    });
-
-                    $("#cercar").click(function () {
-                        console.log($("#cercador").val());
-                        window.location.href = $("#cercador").val();
-                    });
-                }
-            });
-
-
-            $.ajax({
-                url: "/api/categories",
-                type: "GET",
-                success: function (data) {
-                    for(var c of data){
-                        $("#canvasBody").append(
-                            '<div class="row justify-content-center">'+
-                            '<div class="btn-group col-12 mb-2">'+
-                            '<button type="button" class="btn btn-pc-economic-default text-light dropdown-toggle" data-bs-toggle="dropdown"'+
-                            'aria-expanded="false">'+ c.name +'</button>'+
-                            '<ul class="dropdown-menu " id="cat-'+ c.id +'">'+
-                            '</ul>'+
-                            '</div>'+
-                            '<br>'+
-                            '</div>'
-                        );
-                        for (var s of c.subcategorias){
-                            $("#cat-"+c.id).append(
-                                '<li><a class="dropdown-item" href="/categoria/'+ s.id +'">'+ s.name +'</a></li>'
-                            );
-                        }
-                    }
-                },
-            });
-            /*
-            $.ajax({
-                url: "/api/idiomes",
-                type: "GET",
-                success: function (data) {
-                    for (var i of data) {
-                        $("#idiomes").append(
-                            '<option value="' + i.id + '">' + i.nom + "</option>"
-                        );
-                    }
-                },
-            });*/
-        </script>
+        <div class="container-fluid">
+            <div class="navbar-collapse collapse order-1 col-1">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link col-12 d-flex justify-content-center" href="/"
+                        ><img class="col-9" src="/img/static/logo-no-background.png"
+                        /></a>
+                    </li>
+                </ul>
+            </div>
+            <!-- Cercador -->
+            <div class="order-2 col-xs-8 col-7 d-flex">
+                <div class="my-auto col-9 col-xl-11">
+                    <select id="cercador">
+                        <option disabled selected>Buscador</option>
+                    </select>
+                </div>
+                <button class="btn btn-pc-economic-dark mx-1 col" id="cercar">
+                    <i class="bi bi-search"></i>
+                </button>
+            </div>
+            <!-- Login + Carrito -->
+            <div class="d-flex justify-content-center d-md-none d-block mx-1">
+                <a class="nav-link btn btn-pc-economic-dark" href="/">
+                    <i class="bi bi-house"></i>
+                </a>
+            </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse order-3 col" id="navbarSupportedContent">
+                <ul class="navbar-nav col-12 justify-content-evenly">
+                    <li class="nav-item d-flex justify-content-center ">
+                        <a class="nav-link btn btn-pc-economic-dark mt-1" th:href="@{/login}">
+                            <i class="bi bi-person"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item d-flex justify-content-center ">
+                        <button type="button" class="nav-link btn btn-pc-economic-dark mt-1" data-bs-toggle="modal"
+                                data-bs-target="#modal">
+                            <i class="bi bi-translate"></i>
+                        </button>
+                    </li>
+                    <li class="nav-item d-flex justify-content-center ">
+                        <a class="nav-link btn btn-pc-economic-dark mt-1" th:href="@{/carrito}">
+                            <i class="bi bi-cart4"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="modalLabel">Elige tu idioma</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div>
+                        <!-- Imprimir select de idiomas -->
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-primary">Guardar</button>
+                </div>
+            </div>
+        </div>
     </div>
+
+    <nav class="navbar navbar-expand-md bg-pc-economic-light">
+        <!-- Categories Offcanvas -->
+        <button class="btn btn-pc-economic-dark ml-4" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
+            Todas las categorias
+        </button>
+    </nav>
+
+    <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
+         aria-labelledby="offcanvasWithBothOptionsLabel">
+        <div class="offcanvas-header bg-pc-economic-default">
+            <h5 class="offcanvas-title text-light" id="offcanvasWithBothOptionsLabel">
+                Todas las categorias :</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body" id="canvasBody">
+        </div>
+    </div>
+</header>
+<footer
+        class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top container bg-cont"
+        th:fragment="footer"
+>
+    <p class="col-md-4 mb-0 text-muted">
+        © 2023 PCEconomic Company, Inc y Multimedia SLU CIF B73347494. Ses
+        Tapereres, 32, 07500 Manacor, Balearic Islands
+    </p>
+</footer>
+<div th:fragment="jquery">
+    <script
+            crossorigin="anonymous"
+            integrity="sha256-2krYZKh//PcchRtd+H+VyyQoZ/e3EcrkxhM8ycwASPA="
+            src="https://code.jquery.com/jquery-3.6.2.min.js"
+    ></script>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script>
+        $.ajax({
+            url: "/api/propietats",
+            type: "GET",
+            success: function (data) {
+                var options = [];
+
+                for (var prop of data) {
+                    var propietats = "";
+                    for (var v of prop.valor) {
+                        propietats += v.propietat[0].nom  + " " + v.valor + " ";
+                    }
+                    $("#cercador").append(
+                        '<option value="/article/' + prop.article.id + '/' + prop.id + '">' + prop.article.nom + " " + propietats + "</option>"
+                    );
+                }
+
+                $("#cercador").select2({
+                    data: options,
+                    placeholder: "Buscar",
+                    allowClear: true,
+                    width: "100%"
+                });
+
+                $("#cercar").click(function () {
+                    console.log($("#cercador").val());
+                    window.location.href = $("#cercador").val();
+                });
+            }
+        });
+
+
+        $.ajax({
+            url: "/api/categories",
+            type: "GET",
+            success: function (data) {
+                for (var c of data) {
+                    $("#canvasBody").append(
+                        '<div class="row justify-content-center">' +
+                        '<div class="btn-group col-12 mb-2">' +
+                        '<button type="button" class="btn btn-pc-economic-default text-light dropdown-toggle" data-bs-toggle="dropdown"' +
+                        'aria-expanded="false">' + c.name + '</button>' +
+                        '<ul class="dropdown-menu " id="cat-' + c.id + '">' +
+                        '</ul>' +
+                        '</div>' +
+                        '<br>' +
+                        '</div>'
+                    );
+                    for (var s of c.subcategorias) {
+                        $("#cat-" + c.id).append(
+                            '<li><a class="dropdown-item" href="/categoria/' + s.id + '">' + s.name + '</a></li>'
+                        );
+                    }
+                }
+            },
+        });
+        /*
+        $.ajax({
+            url: "/api/idiomes",
+            type: "GET",
+            success: function (data) {
+                for (var i of data) {
+                    $("#idiomes").append(
+                        '<option value="' + i.id + '">' + i.nom + "</option>"
+                    );
+                }
+            },
+        });*/
+    </script>
+</div>
 </html>
