--- a/public/PCEconomic/src/main/resources/templates/register.html
+++ b/public/PCEconomic/src/main/resources/templates/register.html
@@ -14,6 +14,18 @@
                 <label>Nombre: <input type="text" th:field="*{name}"/></label>
             </div>
             <div>
+                <label>Apellido: <input type="text" th:field="*{surname1}"/></label>
+            </div>
+            <div>
+                <label>Apellido: <input type="text" th:field="*{surname2}"/></label>
+            </div>
+            <div>
+                <label>DNI: <input type="text" th:field="*{dni}"/></label>
+            </div>
+            <div>
+                <label>Telefono: <input type="text" th:field="*{telefon}"/></label>
+            </div>
+            <div>
                 <label>Email: <input type="text" th:field="*{email}"/></label>
             </div>
             <div>
