--- a/public/PCEconomic/src/main/resources/templates/categoria.html
+++ b/public/PCEconomic/src/main/resources/templates/categoria.html
@@ -43,13 +43,13 @@
                     }
                     if (prop.esPrincipal === true && idSubcategoriaAux === $('main').data('id-subcat')) {
                         $('#articles').append(
-                            '<a href="/article/' + prop.article.id + '/' + prop.id + '" class="col-xs-12 col-sm-6 col-lg-4 text-end text-decoration-none card d-flex align-items-center">' +
-                            '<span class="text-end h2 text-pc-economic-default bold col-12">' + prop.preu + ' € </span>' +
-                            '<img src="/img/productes/' + prop.article.id + '/' + prop.id + '/' + imgAux + '" class="col-5" alt="img">' +
+                            '<a href="/article/' + prop.article.id + '/' + prop.id + '" class="col-xs-12 col-sm-6 col-lg-4 text-end text-decoration-none card d-flex align-items-center align-self-center">' +
+                            '<img src="/img/productes/' + prop.article.id + '/' + prop.id + '/' + imgAux + '" style="width:300px; height:300px; object-fit: contain;" alt="img" class="mt-2">' +
                             '<div class="col-12 justify-content-center row">' +
                             '<div id="' + prop.id + '" class="row justify-content-evenly col-12"></div>' +
-                            '<div class="text-start h4 col-12"> <p>' + prop.article.nom + '</p></div>' +
-                            '<span class="text-success col-12 text-start mb-2"> Recíbelo mañana </span>' +
+                            '<div><p class="text-start h4 col-12">' + prop.article.nom + '</p></div>' +
+                            '<span class="text-start h2 text-pc-economic-default bold col-12">' + formatCurrency(prop.preu) + '</span>' +
+                            '<span class="text-success col-12 text-start mb-1"> Recíbelo mañana </span>' +
                             '</div>' +
                             '</div>' +
                             '</a>'
@@ -75,5 +75,8 @@
 
             },
         });
+        function formatCurrency(amount) {
+            return amount.toFixed(2).toString().replace(".", ",").replace(/\B(?=(\d{3})+(?!\d))/g, ".") + " €";
+        }
     </script>
 </html>
