--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -44,13 +44,13 @@
                 }
                 if (prop.esPrincipal === true) {
                     $('#articles').append(
-                        '<a href="/article/' + prop.article.id + '/' + prop.id + '" class="col-xs-12 col-sm-6 col-lg-4 text-end text-decoration-none card d-flex align-items-center">' +
-                        '<span class="text-end h2 text-pc-economic-default bold col-12">' + formatCurrency(prop.preu) + '</span>' +
-                        '<img src="/img/productes/' + prop.article.id + '/' + prop.id + '/' + imgAux + '" class="col-4" alt="img">' +
+                        '<a href="/article/' + prop.article.id + '/' + prop.id + '" class="col-xs-12 col-sm-6 col-lg-4 text-end text-decoration-none card d-flex align-items-center align-self-center">' +
+                        '<img src="/img/productes/' + prop.article.id + '/' + prop.id + '/' + imgAux + '" style="width:300px; height:300px; object-fit: contain;" alt="img" class="mt-2">' +
                         '<div class="col-12 justify-content-center row">' +
                         '<div id="' + prop.id + '" class="row justify-content-evenly col-12"></div>' +
-                        '<div class="text-start h4 col-12"> <p>' + prop.article.nom + '</p></div>' +
-                        '<span class="text-success col-12 text-start mb-2"> Recíbelo mañana </span>' +
+                        '<div><p class="text-start h4 col-12">' + prop.article.nom + '</p></div>' +
+                        '<span class="text-start h2 text-pc-economic-default bold col-12">' + formatCurrency(prop.preu) + '</span>' +
+                        '<span class="text-success col-12 text-start mb-1"> Recíbelo mañana </span>' +
                         '</div>' +
                         '</div>' +
                         '</a>'
@@ -66,7 +66,7 @@
                         $('#' + prop.id).append(
                             '<a class="col-3 mt-2 mb-2 row"' +
                             ' href="/article/' + prop.article.id + '/' + props.id
-                            + '"> <img src="/img/productes/' + prop.article.id + '/' + props.id + '/' + imgAux + '" class="col-12" alt="img"> </a>'
+                            + '"> <img src="/img/productes/' + prop.article.id + '/' + props.id + '/' + imgAux + '" style="width:100px; height:100px; object-fit: contain;" alt="img"> </a>'
                         );
                     }
                 }
@@ -74,46 +74,9 @@
             }
         },
     });
-    /*
-    *
-    * var start = 0;
-    var limit = 10;
-    var reachedEnd = false;
-
-    function fetchData() {
-      if (reachedEnd) {
-        return;
-      }
-
-      $.ajax({
-        url: 'url_de_la_api',
-        data: {
-          start: start,
-          limit: limit
-        },
-        success: function(data) {
-          if (data.length == 0) {
-            reachedEnd = true;
-          }
-
-          // Procesar los datos aquí
-          // y agregarlos a la página
-
-          start += limit;
-        }
-      });
-    }
-
-    $(window).scroll(function() {
-      if ($(window).scrollTop() + $(window).height() >= $(document).height()) {
-        fetchData();
-      }
-    });
-
-    *
-    * */
     function formatCurrency(amount) {
         return amount.toFixed(2).toString().replace(".", ",").replace(/\B(?=(\d{3})+(?!\d))/g, ".") + " €";
     }
+
 </script>
 </html>
