--- a/public/PCEconomic/src/main/resources/templates/register.html
+++ b/public/PCEconomic/src/main/resources/templates/register.html
@@ -7,37 +7,65 @@
 </head>
 <body>
     <header th:replace="layout/layout :: navbar"></header>
-    <main class="container text-center">
-        <h1>Registrate Aqui!</h1>
-        <form th:action="@{/register}" th:object="${registerForm}" method="post">
-            <div>
-                <label>Nombre: <input type="text" th:field="*{name}"/></label>
-            </div>
-            <div>
-                <label>Apellido: <input type="text" th:field="*{surname1}"/></label>
-            </div>
-            <div>
-                <label>Apellido: <input type="text" th:field="*{surname2}"/></label>
-            </div>
-            <div>
-                <label>DNI: <input type="text" th:field="*{dni}"/></label>
-            </div>
-            <div>
-                <label>Telefono: <input type="text" th:field="*{telefon}"/></label>
-            </div>
-            <div>
-                <label>Email: <input type="text" th:field="*{email}"/></label>
-            </div>
-            <div>
-                <label>Contraseña: <input type="password" th:field="*{password}"/></label>
-            </div>
-            <div>
-                <label>Confirmar contraseña: <input type="password" th:field="*{confirmPassword}"/></label>
-            </div>
-            <div>
-                <input type="submit" value="Registrarse"/>
-            </div>
-        </form>
+    <main class="container">
+        <h1 class="text-center">Registrate Aqui!</h1>
+
+        <div class="d-flex justify-content-center">
+            <form class="w-50" th:action="@{/register}" th:object="${registerForm}" method="post">
+                <div class="row">
+                    <div class="col-12">
+                        <label class="form-label">Name</label>
+                        <input th:field="*{name}" type="text" class="form-control" placeholder="Name"
+                               aria-label="Name">
+                    </div>
+                    <label class="form-label">Surnames</label>
+                    <div class="col-6">
+                        <input th:field="*{surname1}" type="text" class="form-control" placeholder="First surname"
+                               aria-label="First name">
+                    </div>
+                    <div class="col-6">
+                        <input th:field="*{surname2}" type="text" class="form-control" placeholder="Second surname"
+                               aria-label="Last name">
+                    </div>
+                    <div class="col-6">
+                        <label class="form-label">DNI</label>
+                        <input th:field="*{dni}" type="text" class="form-control" placeholder="DNI"
+                               aria-label="DNI">
+                    </div>
+                    <div class="col-6">
+                        <label class="form-label">Telefon</label>
+                        <input th:field="*{telefon}" type="text" class="form-control" placeholder="Telefon"
+                               aria-label="Telefon">
+                    </div>
+                    <div class="col-12">
+                        <label class="form-label">Email Address</label>
+                        <input th:field="*{email}" type="text" class="form-control" placeholder="Email Address"
+                               aria-label="Email Address">
+                    </div>
+                    <div class="col-6">
+                        <label class="form-label">Password</label>
+                        <input th:field="*{password}" type="text" class="form-control" placeholder="Password"
+                               aria-label="Password">
+                    </div>
+                    <div class="col-6">
+                        <label class="form-label">Confirm Password</label>
+                        <input th:field="*{confirmPassword}" type="text" class="form-control"
+                               placeholder="Confirm Password"
+                               aria-label="Confirm Password">
+                    </div>
+                </div>
+                <div class="text-center mt-3">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+            </form>
+        </div>
+
+
+        <div class="text-center">
+            Ya estas registrado?
+            <a th:href="@{/login}">Iniciar sesión</a>
+        </div>
+
     </main>
 
 
