fix: register.html doent had the correct type

--- a/public/PCEconomic/src/main/resources/templates/register.html
+++ b/public/PCEconomic/src/main/resources/templates/register.html
@@ -44,12 +44,12 @@
                     </div>
                     <div class="col-6">
                         <label class="form-label">Password</label>
-                        <input th:field="*{password}" type="text" class="form-control" placeholder="Password"
+                        <input th:field="*{password}" type="password" class="form-control" placeholder="Password"
                                aria-label="Password">
                     </div>
                     <div class="col-6">
                         <label class="form-label">Confirm Password</label>
-                        <input th:field="*{confirmPassword}" type="text" class="form-control"
+                        <input th:field="*{confirmPassword}" type="password" class="form-control"
                                placeholder="Confirm Password"
                                aria-label="Confirm Password">
                     </div>
