--- a/public/PCEconomic/src/main/resources/templates/login.html
+++ b/public/PCEconomic/src/main/resources/templates/login.html
@@ -9,26 +9,29 @@
     <header th:replace="layout/layout :: navbar"></header>
     <main class="container">
         <h1 class="text-center">Iniciar sesión</h1>
-        <div th:if="${param.error}">
-            Invalid username and password.
-        </div>
-        <div th:if="${param.logout}">
-            You have been logged out.
-        </div>
         <div class="d-flex justify-content-center">
             <form class="needs-validation w-25" th:action="@{/login}"
-                  th:object="${loginForm}" method="post">
+                  th:object="${loginForm}" method="post" novalidate>
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Email address</label>
+                    <label for="exampleInputEmail1" class="form-label">Correo Electronico</label>
                     <input th:field="*{email}" type="email" class="form-control" id="exampleInputEmail1"
-                           aria-describedby="emailHelp">
+                           placeholder="Correo Electronico"
+                           aria-describedby="emailHelp" required>
+                    <div class="invalid-feedback">
+                        Introduzca su Correo Electronico.
+                    </div>
                 </div>
                 <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Password</label>
-                    <input th:field="*{password}" type="password" class="form-control" id="exampleInputPassword1">
+                    <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+                    <input th:field="*{password}" type="password" class="form-control" id="exampleInputPassword1"
+                           placeholder="Contraseña"
+                           required>
+                    <div class="invalid-feedback">
+                        Introduzca su Contraseña.
+                    </div>
                 </div>
                 <div class="text-center">
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-pc-economic-dark">Iniciar Session</button>
                 </div>
             </form>
         </div>
@@ -38,6 +41,8 @@
             <a href="/forgot-password">¿Olvidaste tu contraseña?</a>
         </div>
     </main>
+
+    <div th:replace="layout/layout.html :: jquery"></div>
     <script th:src="@{/js/formvalidator.js}"></script>
     <footer th:replace="layout/layout :: footer"></footer>
 </body>
