--- a/public/PCEconomic/src/main/resources/templates/direcciones-envio.html
+++ b/public/PCEconomic/src/main/resources/templates/direcciones-envio.html
@@ -7,7 +7,13 @@
     <nav th:replace="layout/layout.html :: navbar"></nav>
     <body class="bgbd">
         <main class="container-lg bg-cont mt-md-5 mt-1">
-            <input type="text" class="form-control" id="destination-input" placeholder="Enter a destination location">
+
+            <h1 class="text-center mt-5">Direcciones de envio</h1>
+
+            <div >
+                <input type="text" class="form-control" id="destination-input" placeholder="Enter a destination location">
+            </div>
+
         </main>
         <footer th:replace="layout/layout.html :: footer"></footer>
     </body>
