--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -63,8 +63,8 @@
                         </a>
                     </li> 
                     <li th:if="${client == 'LOGOUT'}" class="nav-item d-flex justify-content-center ">
-                        <a class="nav-link btn btn-pc-economic-dark mt-1" th:href="@{/logout}">
-                            <i class="bi bi-person-check-fill"></i>
+                        <a class="nav-link btn btn-danger mt-1" th:href="@{/logout}">
+                            <i class="bi bi-door-open-fill"></i>
                         </a>
                     </li>
  
